--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 	<head></head>
 
 	<body>
-		Hello World
+		this is <strong>bold</strong>
+		this is <em>italic</em>
+
+		<a href="http://www.google.com">google.com</a>
 	</body>
 
 
