--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 	<head></head>
-
+		<link rel="stylesheet" type="text/css" href="css/styleSheet.css">
+		<h1>HelloWorld</h1>
 	<body>
+		
 		this is <strong>bold</strong>
 		this is <em>italic</em>
 
