testing mobile padding

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head></head>
 		<link rel="stylesheet" type="text/css" href="css/styleSheet.css">
-		<h1>HelloWorld</h1>
-	<body>
 		
-		this is <strong>bold</strong>
+	<body>
+		<h1>Yihong Liu</h1>
+		<p>1A Waterloo Computer Engineering</p>
 		this is <em>italic</em>
 
 		<a href="http://www.google.com">google.com</a>
