--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head></head>
 		<link rel="stylesheet" type="text/css" href="css/styleSheet.css">
-		
+		<script src="javascript/Functions.js" type="text/javascript"></script>
 	<body>
 		<h1>Yihong Liu</h1>
 		<p>1A Waterloo Computer Engineering</p>
-		<button type="button" name="GitHubLink"><img id="github-logo" src="assets/github-logo.png"></button>
+		<button onclick="githubLink()" type="button" name="GitHubLink"><img id="github-logo" src="assets/github-logo.png"></button>
 
 		<!-- <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
 	</body>
