--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head></head>
 		<link rel="stylesheet" type="text/css" href="css/styleSheet.css">
-		<script src="javascript/Functions.js" type="text/javascript"></script>
+		<script src="javascript/functions.js" type="text/javascript"></script>
 	<body>
 		<h1>Yihong Liu</h1>
 		<p>1A Waterloo Computer Engineering</p>
