--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<div id = "bottom">
 				
-			<button onclick="" type="button" name = "resumeLink"><img id = "resume-logo" src = "assets/resume.png"></button>
+			<button onclick="resumeLink()" type="button" name = "resumeLink"><img id = "resume-logo" src = "assets/resume.png"></button>
 			<span id="rtext">Resume</span>
 				
 		</div>
