--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<h1>Yihong Liu</h1>
 		<p>1A Waterloo Computer Engineering</p>
 		
-		<!-- <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
+	
 		<div id = "top">
-			<button onclick="githubLink()" type="button" name="GitHubLink"><img id="github-logo" src="assets/github-logo.png"></button>
+			<button onclick="GitHubLink()" type="button" name="GitHubLink"><img id="github-logo" src="assets/github-logo.png"></button>
 			<span id="ghtext">GitHub</span>
 		</div>
 		<div id = "bottom">
@@ -17,6 +17,7 @@
 			<span id="rtext">Resume</span>
 				
 		</div>
+		
 		
 
 	</body>
