--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 	<head></head>
 		<link rel="stylesheet" type="text/css" href="css/styleSheet.css">
 		<script src="javascript/functions.js" type="text/javascript"></script>
