--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-	<meta name=”viewport” content=”width=device-width, initial-scale=1″>
-	<head></head>
+	<!-- <meta name=”viewport” content=”width=device-width, initial-scale=1″> -->
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+	</head>
+
 		<link rel="stylesheet" type="text/css" href="css/styleSheet.css">
 		<script src="javascript/functions.js" type="text/javascript"></script>
 	<body>
