--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 	
 		<div id = "top">
-			<button onclick="GitHubLink()" type="button" name="GitHubLink"><img id="github-logo" src="assets/github-logo.png"></button>
+			<button onclick="gitHubLink()" type="button" name="GitHubLink"><img id="github-logo" src="assets/github-logo.png"></button>
 			<span id="ghtext">GitHub</span>
 		</div>
 		<div id = "bottom">
