--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>Yihong Liu</h1>
 							<p class="major">3rd year computer engineering student @ UWaterloo</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="images/Resume-3A-3.pdf" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
