--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Photos of the Rockies</h2>
-							<p>If you ever meet me, you'll know I'm proud of being from Calgary</p>
+							<p>If you ever meet me, you'll know I'm proud to be from Calgary</p>
 						</div>
 
 						<!-- Gallery -->
