--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 					</section>
 
 				<!-- Two -->
+					<section class="wrapper style1 align-center">
+					<div class="inner">
+						<h2>Personal Projects</h2>
+					</div>
+						
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Ai-MIDI</h2>
@@ -75,12 +80,13 @@
 							<img src="images/evosim.png" alt="" />
 						</div>
 					</section>
+				</section>
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Photos of the Rockies</h2>
-							<p>If you ever meet me, you'll know I'm proud to be from Calgary</p>
+							<p>If you've ever met me, you know I'm proud to be from Calgary</p>
 						</div>
 
 						<!-- Gallery -->
