--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Yihong Liu</h1>
-							<p class="major">3rd year computer engineering student @ UWaterloo</p>
+							<h1><strong>Yi Hong</strong> Liu</h1>
+							<p class="major">3rd year computer engineering student @ UWaterloo.
+							</p>
+							<p>
+								My first name is pronounced yee-hong
+							</p>
 							<ul class="actions stacked">
 								<li><a href="images/Resume-3A-3.pdf" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
@@ -73,7 +77,7 @@
 							<h2>Evolution Simulator</h2>
 							<p>Simulate predator prey behaviour using C++ and SFML.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://github.com/lyihongl/evosim" target="_blank" class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="image">
