--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<style>
+.center1 {
+	display:flex;
+	align-items:center;
+	justify-content: center;
+}
+</style>
 	<head>
 		<title>Yihong Liu</title>
 		<meta charset="utf-8" />
@@ -21,7 +28,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1><strong>Yi Hong</strong> Liu</h1>
-							<p class="major">3rd year computer engineering student @ UWaterloo.
+							<p class="major">3rd year computer engineering student @ UWaterloo
 							</p>
 							<p>
 								My first name is pronounced yee-hong
@@ -33,6 +40,56 @@
 						<div class="image">
 							<img src="images/me.jpg" alt="" />
 						</div>
+					</section>
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Work Experience</h2>
+						</div>
+						<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+							<div class="content">
+								<h2>PointClickCare</h2>
+								<h4 style="text-align:left;float:left">Software Engineer Co-op</h4>
+								<h5 style="text-align:right;float:right;">Jan 2021 - April 2021</h5>
+								<div style="clear:both;"></div>
+								<p>
+									Developed web applications to service for the health industry using React and Java Spring.
+								</p>
+							</div>
+							<div style="background-color:white;overflow:auto;min-height:70px;"class="image">
+								<img style="position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:80%;min-height:auto;height:auto;" src="images/pcc1.svg" alt=""/>
+							</div>
+						</section>
+						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+							<div class="content">
+								<h2>TD Securities</h2>
+								<h4 style="text-align:left;float:left">Structured Notes Desk Co-op</h4>
+								<h5 style="text-align:right;float:right;">May 2020 - August 2020</h5>
+								<div style="clear:both;"></div>
+								<p>
+									Structured Notes is a member of TD Global Equity Derivatives. We sold complex options (equity derivatives) products to investors.	
+									I worked on migrating an interest rate curve generation process from Excel to Python, saving valuble time for traders.
+									As well, I produced ad-hoc solutions to problems that traders encountered.
+								</p>
+							</div>
+							<div style="background-color:white;overflow:auto;min-height:70px;"class="image">
+								<img style="position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:80%;min-height:auto;height:auto;" src="images/tds1.svg" alt=""/>
+							</div>
+						</section>
+						<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+							<div class="content">
+								<h2>University of Waterloo</h2>
+								<h4 style="text-align:left;float:left">Undergraduate TA</h4>
+								<h5 style="text-align:right;float:right;">August 2019 - December 2019</h5>
+								<div style="clear:both;"></div>
+								<p>
+									Wrote test cases and solutions for weekly C++ quizzes. Provided instructional support on topics such as
+									pointers, memory allocation, logic flow.
+								</p>
+							</div>
+							<div style="background-color:white;"class="image">
+								<img style="width:100%" src="images/uw.svg" alt=""/>
+							</div>
+						</section>
 					</section>
 
 				<!-- Two -->
@@ -61,7 +118,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>University of Waterloo Formula Motorsports</h2>
-							<p>Designed and manufactured PCBs. Updated 3D models in SolidWorks</p>
+							<p>Designed and manufactured PCBs. Updated 3D models in SolidWorks.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -101,7 +158,7 @@
 									</a>
 									<div class="caption">
 										<h3>Near Revelstoke</h3>
-										<p>A hydrodam where my dad works.</p>
+										<p>Taken from a hydro dam where my dad works.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">View Full</span></li>
 										</ul>
