--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<style>
-.center1 {
-	display:flex;
-	align-items:center;
-	justify-content: center;
-}
-</style>
 	<head>
 		<title>Yihong Liu</title>
 		<meta charset="utf-8" />
@@ -43,7 +36,7 @@
 					</section>
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Work Experience</h2>
+							<h2><strong>Work Experience</strong></h2>
 						</div>
 						<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 							<div class="content">
@@ -55,7 +48,7 @@
 									Developed web applications to service for the health industry using React and Java Spring.
 								</p>
 							</div>
-							<div style="background-color:white;overflow:auto;min-height:70px;"class="image">
+							<div style="background-color:white;overflow:auto;min-height:70px;"class="image img-border">
 								<img style="position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:80%;min-height:auto;height:auto;" src="images/pcc1.svg" alt=""/>
 							</div>
 						</section>
@@ -63,7 +56,7 @@
 							<div class="content">
 								<h2>TD Securities</h2>
 								<h4 style="text-align:left;float:left">Structured Notes Desk Co-op</h4>
-								<h5 style="text-align:right;float:right;">May 2020 - August 2020</h5>
+								<h5 style="text-align:right;float:right;">May 2020 - Aug 2020</h5>
 								<div style="clear:both;"></div>
 								<p>
 									Structured Notes is a member of TD Global Equity Derivatives. We sold complex options (equity derivatives) products to investors.	
@@ -79,7 +72,7 @@
 							<div class="content">
 								<h2>University of Waterloo</h2>
 								<h4 style="text-align:left;float:left">Undergraduate TA</h4>
-								<h5 style="text-align:right;float:right;">August 2019 - December 2019</h5>
+								<h5 style="text-align:right;float:right;">Aug 2019 - Dec 2019</h5>
 								<div style="clear:both;"></div>
 								<p>
 									Wrote test cases and solutions for weekly C++ quizzes. Provided instructional support on topics such as
@@ -88,6 +81,21 @@
 							</div>
 							<div style="background-color:white;"class="image">
 								<img style="width:100%" src="images/uw.svg" alt=""/>
+							</div>
+						</section>
+						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+							<div class="content">
+								<h2>Axsium Group</h2>
+								<h4 style="text-align:left;float:left">Solutions Developer</h4>
+								<h5 style="text-align:right;float:right;">Jan 2020 - April 2020</h5>
+								<div style="clear:both;"></div>
+								<p>
+									Spearheaded development of regression test suite, ensuring test coverage is up to date
+									with application features.
+								</p>
+							</div>
+							<div style="background-color:#101B3E;overflow:auto;min-height:70px;"class="image">
+								<img style="position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);width:80%;min-height:auto;height:auto;" src="images/axsium.png" alt=""/>
 							</div>
 						</section>
 					</section>
