--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<!-- Two -->
 					<section class="wrapper style1 align-center">
 					<div class="inner">
-						<h2>Personal Projects</h2>
+						<h2><strong>Personal Projects</strong></h2>
 					</div>
 						
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
