--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/yihong-liu-b70a96170/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.github.com/lyihongl" target="_blank" class="icon brands style2 fa-github"></a></li>
+								<li><a href="https://www.linkedin.com/in/yihong-liu-b70a96170/" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="yh22liu@uwaterloo.ca" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
