--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					My first name is pronounced yee-hong
 				</p>
 				<ul class="actions stacked">
-					<li><a href="images/Resume-3A-3.pdf" target="_blank"
+					<li><a href="images/Resume_3A_plain.pdf" target="_blank"
 							class="button big wide smooth-scroll-middle">Resume</a></li>
 				</ul>
 			</div>
